<resources>
    <string name="app_name">Weather App</string>

    <string name="content_description_weather">Weather image</string>
    <string name="content_description_star">Star icon</string>
    <string name="content_description_search">Search icon</string>
    <string name="content_description_delete">delete icon</string>

    <string name="search_tab_title">Search</string>
    <string name="my_cities_tab_title">My cities</string>
    <string name="settings_tab_title">Settings</string>

    <string name="search_hint">Search cities</string>
    <string name="search_fragment_recent">Recent</string>

    <string name="weather_master_info_thermostat">Min/max</string>
    <string name="weather_master_info_wind">Wind</string>
    <string name="weather_master_info_humidity">Humidity</string>
    <string name="weather_master_info_pressure">Pressure</string>
    <string name="weather_master_info_visibility">Visibility</string>
    <string name="weather_master_info_accuracy">Accuracy</string>
    <string name="today_card_title">Today</string>
    <string name="future_card_title">Next 7 days</string>

    <string name="temperature_text_view">%.1f°</string>
    <string name="thermostat_value_text_view">%.1f°/%.1f°</string>
    <string name="wind_value_text_view">%.1f km/h</string>
    <string name="pressure_value_text_view">%d hPa</string>
    <string name="visibility_value_text_view">%d km</string>
</resources>