<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_surface_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city_name_text_view"
        style="@style/HeadlineLargeNLv1Left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Zagreb" />

    <include
        android:id="@+id/base_info"
        layout="@layout/base_city_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/neutrals_n_lv_3" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:paddingVertical="16dp"
        android:rowCount="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/thermostat_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_thermostat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/thermostat_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_thermostat"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thermostat_image_view" />

            <TextView
                android:id="@+id/thermostat_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thermostat_text_view"
                tools:text="19/25" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/wind_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wind_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_wind"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wind_image_view" />

            <TextView
                android:id="@+id/wind_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wind_text_view"
                tools:text="6 km/h (NW)" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/humidity_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/humidity_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_humidity"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/humidity_image_view" />

            <TextView
                android:id="@+id/humidity_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/humidity_text_view"
                tools:text="37%" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/pressure_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pressure_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_pressure"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressure_image_view" />

            <TextView
                android:id="@+id/pressure_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressure_text_view"
                tools:text="1006 hPa" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/visibility_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_visibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/visibility_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_visibility"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visibility_image_view" />

            <TextView
                android:id="@+id/visibility_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visibility_text_view"
                tools:text="16 km" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill">

            <ImageView
                android:id="@+id/accuracy_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_weather"
                android:src="@drawable/icons_android_ic_accuracy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/accuracy_text_view"
                style="@style/DescriptionNLv2Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_master_info_accuracy"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accuracy_image_view" />

            <TextView
                android:id="@+id/accuracy_value_text_view"
                style="@style/BodyMediumNLv1Center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accuracy_text_view"
                tools:text="93%" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>



</LinearLayout>